[tool.poetry]
name = "looplane"
version = "0.0.1"
description = "Async local task queue with fallback"
authors = ["Raphael <raphael0608@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "looplane" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
lmdb = "*"
rich = { version = "^13.7.0", optional = true }
click = { version = "^8.1.1", optional = true }

[tool.poetry.extras]
cli = ["rich", "click"]

[tool.poetry.scripts]
looplane = "looplane.cli.main:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
ruff = "^0.12.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]  # linha longa já é tratada pelo black
fix = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = true
show_error_codes = true
